# GodelOS_StrangeDevLoop

./: ## Comprehensive Evaluation Report.md  .gitignore  AGENTS.md  BDD_IMPLEMENTATION_SUMMARY.md  BDD_QUICK_REFERENCE.md  BDD_TEST_STATUS.md  BDD_TEST_USAGE.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS_FINAL_REPORT.md  COMPREHENSIVE_FRONTEND_BACKEND_INTEGRATION_REPORT.md  COMPREHENSIVE_REAL_SVELTE_TESTING_REPORT.md  COMPREHENSIVE_RE_AUDIT_REPORT.md  COMPREHENSIVE_SYSTEM_FIXES_REPORT.md  COMPREHENSIVE_SYSTEM_VALIDATION_REPORT.md  COMPREHENSIVE_UI_TESTING_REPORT.md  DYNAMIC_DISCOVERY_REVOLUTION.md  FINAL_COMPREHENSIVE_SVELTE_TESTING_REPORT.md  FORWARD_CHAINING_TODO.md  GODELIOS_USER_WALKTHROUGH_GUIDE.md  GODELOS_EMERGENCE_SPEC.md  INTERACTIVE_TUI_FEATURES.md  LLM_COGNITIVE_ARCHITECTURE_TEST_REPORT.md  LLM_INTEGRATION_FINAL_EVIDENCE_REPORT.md  MINOR_ISSUES_FIXED.md  Makefile  PULL_REQUEST_CHANGES_SUMMARY.md  README.md  TESTING_VALIDATION_SUMMARY.md  TEST_RUNNER_ENHANCEMENT_SUMMARY.md  TRANSPARENCY_AND_KNOWLEDGE_GRAPH_FIXES_REPORT.md  TUI_ENHANCEMENT_COMPLETE.md  Todo.md  cognitive_architecture_test_report.md  comprehensive_architecture_review.py  comprehensive_system_test.js  comprehensive_system_validator.py  debug_concept_flow.py  debug_data_flow.py  debug_experience_format.py  debug_imports.py  demo_consciousness.py  (+41 more)
.agent/: artifacts_manifest.json  code_graph.json  latest_analysis.json  repo_architect_state.json  roadmap.json
.github/: copilot-instructions.md
.jq/: colour-logs.jq
.ticket/: last_step.txt
MVP/: DEPLOYMENT_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  README.md  WHITEPAPER_COMPLIANCE_ANALYSIS.md  app.py  architectural_spec.md  audit_report_post_prune.json  final_comprehensive_experiment.py  requirements.txt  sanityrun.sh  shallow_runs.json  start.sh  validation_report_post_wrapper.json  validation_report_with_depth_policy.json
backend/: .env.example  ____main.old.py  __init__.py  alignment_endpoints.py  config.py  dynamic_knowledge_processor.py  enhanced_cognitive_api.py  goal_management_system.py  godelos_integration.py  input_validation.py  knowledge_ingestion.py  knowledge_management.py  knowledge_models.py  knowledge_pipeline_service.py  live_reasoning_tracker.py  llm_cognitive_driver.py  llm_tool_integration.py  main.py  metacognition_service.py  minimal_server.py  models.py  modernized_main.py  phenomenal_experience_generator.py  requirements.txt  schemas.py  start_server.py  transparency_endpoints.py  unified_server.py  websocket_manager.py  websocket_manager.py.deprecated_backup
demo-data/: exported_demo.json
docs/: CANONICAL_RUNTIME.md  ENHANCED_COGNITIVE_MANAGER_SUMMARY.md  ENHANCED_OBSERVABILITY_IMPLEMENTATION.md  ENHANCED_SYSTEMS_COMPLETION_SUMMARY.md  ENHANCED_WEBSOCKET_STREAMING_IMPLEMENTATION.md  FRAMEWORK_OVERVIEW.md  Todo.md  (+7 more)
(+918 files in other folders)
